experiment with google plus widget

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+	<!-- Place this tag in your head or just before your close body tag. -->
+	<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -23,7 +27,9 @@
 
         <!-- Add your site or application content here -->
 
-        <h1>Main Title</h1>
+	<!-- google plus widget -->
+	<div class="g-page" data-width="320" data-href="//plus.google.com/103890813912672931897" data-theme="dark" data-rel="publisher"></div>
+
 		<div class="accordion">
 			<section id="01">
 				<h2><a href="#01">Header 2</a></h2>
