--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	</div>
 
 		<div class="accordion">
-			<section id="kalender-kalender">
-				<h2><a href="#kalender-kalender">Activiteiten-kalender</a></h2>
+			<section id="activiteiten-kalender">
+				<h2><a href="#activiteiten-kalender">Activiteiten-kalender</a></h2>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat amet eos harum aut minus repellat similique at perferendis maxime ad minima quam rerum in voluptas. Vitae, nam non dolore.</p>
 					<p>link naar het evenementen-overzicht</p>
@@ -64,7 +64,7 @@
 			</section>
 			
 			<section id="contact">
-				<h2><a href="#contact">Contacteer ons</a></h2>
+				<h2><a href="#contact">Contacteer ons</a></	h2>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat amet eos harum aut minus repellat similique at perferendis maxime ad minima quam rerum in voluptas. Vitae, nam non dolore.</p>
 				</div>
