fix a inline <> block (slidetrigger)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<div class="accordion">
 			<section id="activiteiten-kalender">
-				<h2><a href="#activiteiten-kalender">Activiteiten-kalender</a></h2>
+				<h2><a class="slidetrigger" href="#activiteiten-kalender">Activiteiten-kalender</a></h2>
 				<div>
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
 					<a href="https://plus.google.com/u/0/b/103890813912672931897/events">Activiteiten overzicht</a>
@@ -46,7 +46,7 @@
 			</section>
 
 			<section id="blijf-op-de-hoogte">
-				<h2><a href="#blijf-op-de-hoogte">Blijf op de hoogte</a></h2>
+				<h2><a class="slidetrigger" href="#blijf-op-de-hoogte">Blijf op de hoogte</a></h2>
 				<div>
 					<p>Laat hier op je gegevens achter en we sturen je een mailtje waneer er wat op til is... </p>
 					<p>MC subscribe form</p>
@@ -57,7 +57,7 @@
 			</section>
 
 			<section id="lidmaatschap">
-				<h2><a href="#lidmaatschap">Lid worden</a></h2>
+				<h2><a class="slidetrigger" href="#lidmaatschap">Lid worden</a></h2>
 				<div>
 					<h3>Waarom?</h3>
 					<ul>
@@ -84,7 +84,7 @@
 			</section>
 
 			<section id="over-oudscouts-parsival">
-				<h2><a href="#over-oudscouts-parsival">Meer over Oudscouts Parsival</a></h2>
+				<h2><a class="slidetrigger" href="#over-oudscouts-parsival">Meer over Oudscouts Parsival</a></h2>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat amet eos harum aut minus repellat similique at perferendis maxime ad minima quam rerum in voluptas. Vitae, nam non dolore.</p>
 					<ul>
@@ -99,7 +99,7 @@
 			</section>
 			
 			<section id="contact">
-				<h2><a href="#contact">Contacteer ons</a></h2>
+				<h2><a class="slidetrigger" href="#contact">Contacteer ons</a></h2>
 				<div>
 					<p>Contact opnemen kan heel eenvoudig:</p>
 					<ul>
