various cosmetic fixes & tweaking content

--- a/index.html
+++ b/index.html
@@ -32,39 +32,49 @@
 
 	<div id="gplusembed">
 		<!-- google plus widget -->
-		<div class="g-page" data-width="320" data-href="//plus.google.com/103890813912672931897" data-theme="dark" data-rel="publisher"></div>
+		<div class="g-page" data-width="300" data-href="//plus.google.com/103890813912672931897" data-theme="dark" data-rel="publisher"></div>
 	</div>
 
-		<div class="accordion">
+		<div id="accordion">
 			<section id="activiteiten-kalender">
-				<h2><a class="slidetrigger" href="#activiteiten-kalender">Activiteiten-kalender</a></h2>
+				<h2 class="slidetitle"><a href="#activiteiten-kalender">Activiteiten-kalender</a></h2>
 				<div>
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
 					<a href="https://plus.google.com/u/0/b/103890813912672931897/events">Activiteiten overzicht</a>
-					<p>Alle activiteiten hebben een vrijblijvend karakter (er is dus geen enkele verplichting). Voor de activiteiten die we zelf organiseren (weekends, kamp, e.d.) vragen we wel een <a href="#lidmaatschap">volwaardig lidmaatschap</a>.  Maar je zal hier eveneens dingen terugvinden die voor iedereen bedoeld zijn (vb. de jaarlijkse Parsival-opendeurdag)</p>
+					<aside>
+						<p>Alle activiteiten hebben een vrijblijvend karakter (er is dus geen enkele verplichting). Voor de activiteiten die we zelf organiseren (weekends, kamp, e.d.) vragen we wel een <a href="#lidmaatschap">volwaardig lidmaatschap</a>.  Maar je zal eveneens dingen terugvinden die voor iedereen bedoeld zijn (vb. de jaarlijkse Parsival-opendeurdag)</p>
+					</aside>
 				</div>
 			</section>
 
 			<section id="blijf-op-de-hoogte">
-				<h2><a class="slidetrigger" href="#blijf-op-de-hoogte">Blijf op de hoogte</a></h2>
+				<h2 class="slidetitle"><a href="#blijf-op-de-hoogte">Blijf op de hoogte</a></h2>
 				<div>
-					<p>Laat hier op je gegevens achter en we sturen je een mailtje waneer er wat op til is... </p>
+					<p>Laat hier op je gegevens achter en we sturen je een af en toe mailtje, telkens er wat op til is dat oudscouts aanbelangt... </p>
 					<p>MC subscribe form</p>
 					<p>Omdat we ons graag een beeld vormen van ons publiek...</p>
 					<p>MC subscribe form - deel 2 (optionele vragen)</p>
-					<p>Wie reeds was ingeschreven op de vorige site hoeft dat niet opnieuw te doen.</p>
+					<aside>
+						<p>Wie reeds was ingeschreven op de vorige site hoeft dat niet opnieuw te doen.</p>
+					</aside>
+					<aside>
+						<p>Je inschrijven op onze mailinglist staat NIET gelijk met een volwaardig (betalend) lidmaatschap.</p>
+					</aside>
+					<aside>
+						<p>Zoals de wet op de privacy voorschrijft geven wij deze informatie NOOIT door aan derden.</p>
+					</aside>
 				</div>
 			</section>
 
 			<section id="lidmaatschap">
-				<h2><a class="slidetrigger" href="#lidmaatschap">Lid worden</a></h2>
+				<h2 class="slidetitle"><a href="#lidmaatschap">Lid worden</a></h2>
 				<div>
 					<h3>Waarom?</h3>
 					<ul>
-						<li>Het geeft ons een beeld van 'de geïnteresseerde achterban', voor wie we deze moeite doen en dingen willen organiseren.</li>
-						<li>Voor de verzekering. Het lidgeld omvat een <a href="http://www.vosog.eu/page?&orl=1&ssn=&lng=1&pge=49">oudscouts-verzekering via Vosog</a> (=Vlaamse Oud Scouts en Oud Gidsen). Op die manier bent u afdoende verzekerd voor de meeste activiteiten die we organiseren.</li>
+						<li>Voor de verzekering. Het lidgeld omvat een <a href="http://www.vosog.eu/page?&orl=1&ssn=&lng=1&pge=49">oudscouts-verzekering via Vosog</a> (=Vlaamse Oud Scouts en Oud Gidsen). Op die manier ben je afdoende verzekerd voor de meeste activiteiten die we organiseren.</li>
 						<li>Wie lid is proberen we actief op de hoogte te houden van allerhande activiteiten die interessant kunnen zijn voor oud-scouts en aanverwanten.</li>
-						<li>Sommige van onze eigen activiteiten staan alleen open voor betalende  leden.  Voor deelname is lidmaatschap dan vereist.</li> 
+						<li>Sommige van onze eigen activiteiten staan alleen open voor betalende  leden.  Voor deelname is lidmaatschap dan vereist.</li>
+						<li>Het geeft ons een beeld van 'de geïnteresseerde achterban', voor wie we deze moeite doen en dingen willen organiseren.</li> 
 					</ul>
 					<h3>Wie?</h3>
 					<ul>
@@ -75,31 +85,33 @@
 					<h3>Hoeveel kost dat?</h3>
 					<p>Lid zijn van oudscouts Parsival kost €12,50 per individu, €20 euro voor een samenwonend koppel per jaar.</p>
 					<p>Het gros daarvan gaat naar de Vosog-verzekering. Wat overblijft zijn enkele euro's die we kunnen gebruiken voor onze eigen minimale werkingskosten, en af en toe een extraatje voor onze leden.</p>
-					<p>Aan de mensen die af en toe deelnemen met de kinderen raden we tevens aan deze ook te verzekeren. Voor een kleine bijdrage van 1 euro per kind per jaar kunnen zij zonder zorgen mee. Te gek om niet te doen dus!</p>
+					<aside>
+						<p>Aan de mensen met (kleine) kinderen: voor een kleine extra bijdrage van 1 euro per kind (tot 12j) kunnen ze mee verzekerd worden. <strong>Te gek om niet te doen dus!</strong></p>
+					</aside>
 					<h3>Hoe?</h3>
 					<p>Door een kleine bijdrage over te maken maakt u zichzelf officieel lid  van 'oud-scouts Parsival'. Dat lidmaatschap geldt dan voor het lopende werkjaar en dient dus ieder jaar hernieuwd te worden.</p>
 					<p>Praktisch: stort het lidgeld op het rekeningnummer van de oudscouts: 979-9535082-84 met vermelding van je naam/totem en een geldig email-adres.</p>
-					<p>Evt. kan je ook cash betalen op één van onze activiteiten. Vaste aanspreekpunt is dan Hop, Pony, of iemand anders van het bestuur.</p>
+					<p>Evt. kan je ook cash betalen op één van onze activiteiten. De beste aanspreekpunten zijn dan Hop, Pony, of iemand anders van het bestuur (in die volgorde).</p>
 				</div>
 			</section>
 
 			<section id="over-oudscouts-parsival">
-				<h2><a class="slidetrigger" href="#over-oudscouts-parsival">Meer over Oudscouts Parsival</a></h2>
+				<h2 class="slidetitle"><a href="#over-oudscouts-parsival">Meer over Oudscouts Parsival</a></h2>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat amet eos harum aut minus repellat similique at perferendis maxime ad minima quam rerum in voluptas. Vitae, nam non dolore.</p>
 					<ul>
-						<li>Voorzitter: V. Hazewind (N. Geens)</li>
-						<li>Secretaris: Z. Das (E. Verschaeren)</li>
-						<li>Financieel Directeur: W. Hop (S. Van Asselberghs)</li>
-						<li>Logistiek & Materiaal: S. Vos (B. Van Asch)</li>
-						<li>Logistiek & Materiaal: E. Gibbon (K. Berings)</li>
+						<li><strong>Hazewind</strong> alias Niko Geens <em>(voorzitter)</em></li>
+						<li><strong>Das</strong> alias Else Verschaeren <em>(secretaris)</em></li>
+						<li><strong>Hop</strong> alias Stijn Van Asselberghs <em>(financiëel directeur)</em></li>
+						<li><strong>Vos</strong> alias Bart Van Asch <em>(logistiek & materiaal)</em></li>
+						<li><strong>Gibbon</strong> alias Koen Berings <em>(logistiek & materiaal)</em></li>
 					</ul>
-					<p>Daarnaast mogen we ook steevast rekenen op een schare vrijwillige medewerkers, de harde kern zoals dat heet, zonder wie vele activiteiten nooit tot stand zouden komen.</p>
+					<p>Daarnaast hebben we steevast het geluk en de eer te kunnen rekenen op een solide achterban, de harde kern zoals dat heet, zonder dewelke vele activiteiten nooit tot stand zouden komen.</p>
 				</div>
 			</section>
 			
 			<section id="contact">
-				<h2><a class="slidetrigger" href="#contact">Contacteer ons</a></h2>
+				<h2 class="slidetitle"><a href="#contact">Contacteer ons</a></h2>
 				<div>
 					<p>Contact opnemen kan heel eenvoudig:</p>
 					<ul>
@@ -107,6 +119,7 @@
 						<li>via email: <a href="mailto:oudscouts@parsival.be">oudscouts@parsival.be</a></li>
 						<li>met een bericht aan onze G+ pagina (voor alle volgers)</li>
 					</ul>
+					<p>Sidder noch beef, we bijten heus niet ;-)</p>
 				</div>
 			</section>
 			
