--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<h2 class="slidetitle"><a href="#activiteiten-kalender">Activiteiten-kalender</a></h2>
 				<div>
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
-					<a href="https://plus.google.com/u/0/b/103890813912672931897/events">Activiteiten overzicht</a>
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Activiteiten overzicht</a></p>
 					<aside>
 						<p>Alle activiteiten hebben een vrijblijvend karakter (er is dus geen enkele verplichting). Voor de activiteiten die we zelf organiseren (weekends, kamp, e.d.) vragen we wel een <a href="#lidmaatschap">volwaardig lidmaatschap</a>.  Maar je zal eveneens dingen terugvinden die voor iedereen bedoeld zijn (vb. de jaarlijkse Parsival-opendeurdag)</p>
 					</aside>
