toevoegen footer + css tweaks

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
         <!-- Add your site or application content here -->
 
-	<div id="gplusembed">
-		<!-- google plus widget -->
-		<div class="g-page" data-width="300" data-href="//plus.google.com/103890813912672931897" data-theme="dark" data-rel="publisher"></div>
-	</div>
+		<div id="gplusembed">
+			<!-- google plus widget -->
+			<div class="g-page" data-width="300" data-href="//plus.google.com/103890813912672931897" data-theme="dark" data-rel="publisher"></div>
+		</div>
 
 		<div id="accordion">
 			<section id="activiteiten-kalender">
 				<h2 class="slidetitle"><a href="#activiteiten-kalender">Activiteiten-kalender</a></h2>
 				<div>
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Activiteiten overzicht</a></p>
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het activiteiten overzicht</a></p>
 					<aside>
 						<p>Alle activiteiten hebben een vrijblijvend karakter (er is dus geen enkele verplichting). Voor de activiteiten die we zelf organiseren (weekends, kamp, e.d.) vragen we wel een <a href="#lidmaatschap">volwaardig lidmaatschap</a>.  Maar je zal eveneens dingen terugvinden die voor iedereen bedoeld zijn (vb. de jaarlijkse Parsival-opendeurdag)</p>
 					</aside>
@@ -59,9 +59,6 @@
 					</aside>
 					<aside>
 						<p>Je inschrijven op onze mailinglist staat NIET gelijk met een volwaardig (betalend) lidmaatschap.</p>
-					</aside>
-					<aside>
-						<p>Zoals de wet op de privacy voorschrijft geven wij deze informatie NOOIT door aan derden.</p>
 					</aside>
 				</div>
 			</section>
@@ -88,10 +85,18 @@
 					<aside>
 						<p>Aan de mensen met (kleine) kinderen: voor een kleine extra bijdrage van 1 euro per kind (tot 12j) kunnen ze mee verzekerd worden. <strong>Te gek om niet te doen dus!</strong></p>
 					</aside>
+					<aside>
+						<p>Het lidmaatschap dient bij aanvang van elk werkjaar hernieuwd te worden.</p>
+					</aside>
 					<h3>Hoe?</h3>
-					<p>Door een kleine bijdrage over te maken maakt u zichzelf officieel lid  van 'oud-scouts Parsival'. Dat lidmaatschap geldt dan voor het lopende werkjaar en dient dus ieder jaar hernieuwd te worden.</p>
-					<p>Praktisch: stort het lidgeld op het rekeningnummer van de oudscouts: 979-9535082-84 met vermelding van je naam/totem en een geldig email-adres.</p>
-					<p>Evt. kan je ook cash betalen op één van onze activiteiten. De beste aanspreekpunten zijn dan Hop, Pony, of iemand anders van het bestuur (in die volgorde).</p>
+					<p>Stort het lidgeld op het rekeningnummer van de oudscouts: </p>
+					<div class="infoblock">
+						<div class="accountnumber">979-9535082-84</div> 
+						<em>met vermelding van je naam/totem en een geldig email-adres.</em>
+					</div>
+					<aside>
+						<p>Evt. kan je ook cash betalen op één van onze activiteiten. De beste aanspreekpunten zijn dan Hop, Pony, of iemand anders van het bestuur (in die volgorde).</p>
+					</aside>
 				</div>
 			</section>
 
@@ -123,6 +128,12 @@
 				</div>
 			</section>
 			
+			<footer>
+				<p>&copy 1999-2013 Oudscouts Parsival - Alle rechten voorbehouden<br />
+				Deze site valt onder een <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl">Creative Commons licentie</a>.</p>
+				<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl"><img alt="Creative Commons-Licentie" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" style="padding-left:0.625em" /></a></p>
+			<footer>
+
 		</div>
 
         <!-- Jquery @googleCDN with local fallback -->
