add MC embedded form

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <!-- Import Google Webfont 'Roboto' -->
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,900' rel='stylesheet' type='text/css'>
 
+        <!-- MailChimp default form styles -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -50,15 +54,111 @@
 			<section id="blijf-op-de-hoogte">
 				<h2 class="slidetitle"><a href="#blijf-op-de-hoogte">Blijf op de hoogte</a></h2>
 				<div>
-					<p>Laat hier op je gegevens achter en we sturen je een af en toe mailtje, telkens er wat op til is dat oudscouts aanbelangt... </p>
-					<p>MC subscribe form</p>
-					<p>Omdat we ons graag een beeld vormen van ons publiek...</p>
-					<p>MC subscribe form - deel 2 (optionele vragen)</p>
+					<p>Laat hier op je gegevens achter als je op de hoogte wil blijven van onze activitieten. We sturen je dan een af en toe mailtje, telkens er wat op til is dat oudscouts aanbelangt... </p>
+					<div id="mc_embed_signup">
+						<form action="http://parsival.us7.list-manage.com/subscribe/post?u=ecb739b64162b10e9ce286ee2&amp;id=1953d722c6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+						<div class="mc-field-group">
+							<label for="mce-EMAIL">Email  <span class="asterisk">*</span>
+						</label>
+							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+						</div>
+						<div class="mc-field-group">
+							<label for="mce-FIRSTNAME">Voornaam </label>
+							<input type="text" value="" name="FIRSTNAME" class="" id="mce-FIRSTNAME">
+						</div>
+						<div class="mc-field-group">
+							<label for="mce-LASTNAME">Achternaam </label>
+							<input type="text" value="" name="LASTNAME" class="" id="mce-LASTNAME">
+						</div>
+						<div class="mc-field-group">
+							<label for="mce-PRETOTEM">Adjectief </label>
+							<input type="text" value="" name="PRETOTEM" class="" id="mce-PRETOTEM">
+						</div>
+						<div class="mc-field-group">
+							<label for="mce-TOTEM">Totem </label>
+							<input type="text" value="" name="TOTEM" class="" id="mce-TOTEM">
+						</div>
+						</div><div class="mc-field-group">
+							<label for="mce-NICKNAME">Bijnaam </label>
+							<input type="text" value="" name="NICKNAME" class="" id="mce-NICKNAME">
+						</div>
+						<div class="mc-field-group size1of2">
+							<label for="mce-BIRTHDATE-month">Geboortedatum </label>
+							<div class="datefield">
+								<span class="subfield monthfield"><input type="text" pattern="[0-9]*" value="MM" size="2" maxlength="2" name="BIRTHDATE[month]" id="mce-BIRTHDATE-month"></span> / 
+								<span class="subfield dayfield"><input type="text" pattern="[0-9]*" value="DD" size="2" maxlength="2" name="BIRTHDATE[day]" id="mce-BIRTHDATE-day"></span> / 
+								<span class="subfield yearfield"><input type="text" pattern="[0-9]*" value="YYYY" size="4" maxlength="4" name="BIRTHDATE[year]" id="mce-BIRTHDATE-year"></span>
+						        <span class="small-meta nowrap">( mm / dd / yyyy )</span>
+								<div class="fake-date"><input type="hidden" class=" date" id="BIRTHDATE-fake-date" value=""></div>
+							</div>
+						</div>
+						<div class="mc-field-group size1of2">
+							<label for="mce-PHONE">Telefoon </label>
+						    <div class="phonefield phonefield-us">
+						        (<span class="phonearea"><input pattern="[0-9]*" id="mce-PHONE-area" name="PHONE[area]" maxlength="3" size="3" value="" type="text"></span>)
+						        <span class="phonedetail1"><input pattern="[0-9]*" id="mce-PHONE-detail1" name="PHONE[detail1]" maxlength="3" size="3" value="" type="text"></span> - 
+						        <span class="phonedetail2"><input pattern="[0-9]*" id="mce-PHONE-detail2" name="PHONE[detail2]" maxlength="4" size="4" value="" type="text"></span>
+								<span class="small-meta nowrap">(###) ###-####</span>
+								<div class="fake-phone"><input type="hidden" class=" phone" id="PHONE-fake-phone" value=""></div>
+						    </div>
+						<div class="mc-field-group">
+							<label for="mce-LASTYEAR">Laatste Scoutsjaar </label>
+							<select name="LASTYEAR" class="" id="mce-LASTYEAR">
+								<option value="--">Scoutsjaar - Jaarthema - Kampplaats - Kampthema</option>
+								<option value="2012-2013">2012-2013 - Scouting? Gewoon doen! - Baclain - Het Dorp</option>
+								<option value="2011-2012">2011-2012 - Armoede is een onrecht. Maak er spel van! - Moyen - Parsival Airlines</option>
+								<option value="2010-2011">2010-2011 - Gloeiend erbij - Villers-Le-Gambon - F.C. Parsival</option>
+								<option value="2009-2010">2009-2010 - Anders getikt - Gérouville - Op een onbewoond eiland</option>
+								<option value="2008-2009">2008-2009 - Burenluren! - Hédomont - Cowboys</option>
+								<option value="2007-2008">2007-2008 - Samen in touw - Graide - Fabriek</option>
+								<option value="2006-2007">2006-2007 - One World One Promise - Steinbach - Feest</option>
+								<option value="2005-2006">2005-2006 - Verdraai-de wereld - Solwaster - Rock Parsival</option>
+								<option value="2004-2005">2004-2005 - Jongleren - Surice - De Boerderij</option>
+								<option value="2003-2004">2003-2004 - Klinkt als scouting - Dairomont - Ridder Parsival</option>
+								<option value="2002-2003">2002-2003 - Buiten is troef - Wigny (oorspr. Kiffis - Frankrijk) - Er was eens</option>
+								<option value="2001-2002">2001-2002 - Een spatje meer - Bailièvre - Den Bijbel</option>
+								<option value="2000-2001">2000-2001 - Zet je in, Leef je uit - Langlire - Het Geroezemoezebos</option>
+								<option value="1999-2000">1999-2000 - Droom me daar 'ns - Èthe - Sesamstraat</option>
+								<option value="1998-1999">1998-1999 - Graag gedaan - Bièvre - Griekse mythen en legendes</option>
+								<option value="1997-1998">1997-1998 - Scouting Creatieve Tijd - Le Mesnil - Toy Story</option>
+								<option value="1996-1997">1996-1997 - Tuur in de natuur - Oster - Ruimte</option>
+								<option value="1995-1996">1995-1996 - In samen spraak - Schockville - Ridders</option>
+								<option value="1994-1995">1994-1995 - Plaats om te spelen - Felenne - Piraten</option>
+								<option value="1993-1994">1993-1994 - Alles om het lijf - Botassart - Heksen</option>
+								<option value="1992-1993">1992-1993 - Op verkenning - Maspelt - De Oertijd</option>
+								<option value="1991-1992">1991-1992 - Doen we het zelf? - Meix-le-Tige - Met de motor door Europa</option>
+								<option value="1990-1991">1990-1991 - En waarom niet? - Felenne - Hollywood</option>
+								<option value="1989-1990">1989-1990 - Het eerste zicht voorbij - Wilwerwiltz (Luxemburg) - Den Oriënt - Het Oosten</option>
+								<option value="1988-1989">1988-1989 - Vreemd uit de hoek - Ottré - De Scoutswet</option>
+								<option value="1987-1988">1987-1988 - 't Is niet om het even - Butgenbach - Het Maritieme (water)</option>
+								<option value="1986-1987">1986-1987 - Geen leuze maar een doel - Forge-Philippe - Muppets Show</option>
+								<option value="1985-1986">1985-1986 - Scouting in kleuren - Recht - Brandweer</option>
+								<option value="1984-1985">1984-1985 - Scouting natuurlijk in actie - Felenne - Asterix & Obelix en de Romeinen</option>
+								<option value="1983-1984">1983-1984 - Scouting natuurlijk - Stubach - Raket</option>
+								<option value="1982-1983">1982-1983 - Moet je meemaken - Botassart - In de ban van de ring</option>
+								<option value="1981-1982">1981-1982 - 'n Vinger in de pap (niet aan mee gedaan) - Hechtel-Eksel - Circus</option>
+								<option value="1980-1981">1980-1981 - Geef me de vijf - Sart-Bernard - Ridders van de ronde tafel</option>
+								<option value="1979-1980">1979-1980 - Zet je in beweging - Gruitrode - Piraten</option>
+								<option value="1978-1979">1978-1979 - Spelen voor de vrijheid om te spelen (VVKS + VVKM) - Mormont - Oertijd</option>
+								<option value="1977-1978">1977-1978 - Zet alles op het spel (VVKS + VVKM) - Wanne - Koning van Katoren</option>
+								<option value="1976-1977">1976-1977 - Gewoon buiten: buitengewoon (VVKS + VVKM) - Jallet - Asterix</option>
+								<option value="1975-1976">1975-1976 - Het gaat van jezelf (VVKS + VVKM) - Zutendaal - Teletijdmachine</option>
+								<option value="1974-1975">1974-1975 - Jouw gift: geestdrift (VVKS + VVKM) - Op(neer)oeteren - De Briganten</option>
+								<option value="1973-1974">1973-1974 - Echt aardig: rechtvaardig (VVKS + VVKM) - Grobbendonk - ?</option>
+							</select>
+						</div>
+							<div id="mce-responses" class="clear">
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>	<div class="clear"><input type="submit" value="Ja, hou me op de hoogte!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+						</form>
+					</div>
 					<aside>
 						<p>Wie reeds was ingeschreven op de vorige site hoeft dat niet opnieuw te doen.</p>
 					</aside>
 					<aside>
-						<p>Je inschrijven op onze mailinglist staat NIET gelijk met een volwaardig (betalend) lidmaatschap.</p>
+						<p>Je inschrijven op deze mailinglist staat NIET gelijk met een volwaardig (betalend) lidmaatschap.</p>
 					</aside>
 				</div>
 			</section>
