embed cleaner MC form

--- a/index.html
+++ b/index.html
@@ -55,57 +55,40 @@
 				<h2 class="slidetitle"><a href="#blijf-op-de-hoogte">Blijf op de hoogte</a></h2>
 				<div>
 					<p>Laat hier op je gegevens achter als je op de hoogte wil blijven van onze activitieten. We sturen je dan een af en toe mailtje, telkens er wat op til is dat oudscouts aanbelangt... </p>
-					<div id="mc_embed_signup">
+
+					<!-- Begin MailChimp Signup Form -->
+					<div id="opt-in">
 						<form action="http://parsival.us7.list-manage.com/subscribe/post?u=ecb739b64162b10e9ce286ee2&amp;id=1953d722c6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-						<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-						<div class="mc-field-group">
-							<label for="mce-EMAIL">Email  <span class="asterisk">*</span>
-						</label>
-							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-						</div>
-						<div class="mc-field-group">
-							<label for="mce-FIRSTNAME">Voornaam </label>
-							<input type="text" value="" name="FIRSTNAME" class="" id="mce-FIRSTNAME">
-						</div>
-						<div class="mc-field-group">
-							<label for="mce-LASTNAME">Achternaam </label>
-							<input type="text" value="" name="LASTNAME" class="" id="mce-LASTNAME">
-						</div>
-						<div class="mc-field-group">
-							<label for="mce-PRETOTEM">Adjectief </label>
-							<input type="text" value="" name="PRETOTEM" class="" id="mce-PRETOTEM">
-						</div>
-						<div class="mc-field-group">
-							<label for="mce-TOTEM">Totem </label>
-							<input type="text" value="" name="TOTEM" class="" id="mce-TOTEM">
-						</div>
-						</div><div class="mc-field-group">
-							<label for="mce-NICKNAME">Bijnaam </label>
-							<input type="text" value="" name="NICKNAME" class="" id="mce-NICKNAME">
-						</div>
-						<div class="mc-field-group size1of2">
+							
+							<input type="email" value="Jouw emailadres" name="EMAIL" class="required email" id="mce-EMAIL" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+
+							<input type="text" value="Voornaam" name="FIRSTNAME" class="firstname" id="mce-FIRSTNAME" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+
+							<input type="text" value="Achternaam" name="LASTNAME" class="lastname" id="mce-LASTNAME" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+
+							<input type="text" value="Adjectief" name="PRETOTEM" class="pretotem" id="mce-PRETOTEM" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+
+							<input type="text" value="Totem" name="TOTEM" class="totem" id="mce-TOTEM" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+
+							<input type="text" value="Bijnaam" name="NICKNAME" class="nickname" id="mce-NICKNAME" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+
 							<label for="mce-BIRTHDATE-month">Geboortedatum </label>
 							<div class="datefield">
-								<span class="subfield monthfield"><input type="text" pattern="[0-9]*" value="MM" size="2" maxlength="2" name="BIRTHDATE[month]" id="mce-BIRTHDATE-month"></span> / 
-								<span class="subfield dayfield"><input type="text" pattern="[0-9]*" value="DD" size="2" maxlength="2" name="BIRTHDATE[day]" id="mce-BIRTHDATE-day"></span> / 
-								<span class="subfield yearfield"><input type="text" pattern="[0-9]*" value="YYYY" size="4" maxlength="4" name="BIRTHDATE[year]" id="mce-BIRTHDATE-year"></span>
-						        <span class="small-meta nowrap">( mm / dd / yyyy )</span>
+								<span class="subfield dayfield">
+									<input type="text" pattern="[0-9]*" value="Dag" size="2" maxlength="2" name="BIRTHDATE[day]" id="mce-BIRTHDATE-day" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+								</span> /
+								<span class="subfield monthfield">
+									<input type="text" pattern="[0-9]*" value="Maand" size="2" maxlength="2" name="BIRTHDATE[month]" id="mce-BIRTHDATE-month" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+								</span> / 
+								<span class="subfield yearfield">
+									<input type="text" pattern="[0-9]*" value="Jaar" size="4" maxlength="4" name="BIRTHDATE[year]" id="mce-BIRTHDATE-year" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
+								</span>
+						        <span class="small-meta nowrap">( dd / mm / yyyy )</span>
 								<div class="fake-date"><input type="hidden" class=" date" id="BIRTHDATE-fake-date" value=""></div>
 							</div>
-						</div>
-						<div class="mc-field-group size1of2">
-							<label for="mce-PHONE">Telefoon </label>
-						    <div class="phonefield phonefield-us">
-						        (<span class="phonearea"><input pattern="[0-9]*" id="mce-PHONE-area" name="PHONE[area]" maxlength="3" size="3" value="" type="text"></span>)
-						        <span class="phonedetail1"><input pattern="[0-9]*" id="mce-PHONE-detail1" name="PHONE[detail1]" maxlength="3" size="3" value="" type="text"></span> - 
-						        <span class="phonedetail2"><input pattern="[0-9]*" id="mce-PHONE-detail2" name="PHONE[detail2]" maxlength="4" size="4" value="" type="text"></span>
-								<span class="small-meta nowrap">(###) ###-####</span>
-								<div class="fake-phone"><input type="hidden" class=" phone" id="PHONE-fake-phone" value=""></div>
-						    </div>
-						<div class="mc-field-group">
-							<label for="mce-LASTYEAR">Laatste Scoutsjaar </label>
-							<select name="LASTYEAR" class="" id="mce-LASTYEAR">
-								<option value="--">Scoutsjaar - Jaarthema - Kampplaats - Kampthema</option>
+
+							<select name="LASTYEAR" class="lastyear" id="mce-LASTYEAR">
+								<option value="--">Laatste scoutsjaar (jaarthema, kampplaats, kampthema)</option>
 								<option value="2012-2013">2012-2013 - Scouting? Gewoon doen! - Baclain - Het Dorp</option>
 								<option value="2011-2012">2011-2012 - Armoede is een onrecht. Maak er spel van! - Moyen - Parsival Airlines</option>
 								<option value="2010-2011">2010-2011 - Gloeiend erbij - Villers-Le-Gambon - F.C. Parsival</option>
@@ -147,13 +130,21 @@
 								<option value="1974-1975">1974-1975 - Jouw gift: geestdrift (VVKS + VVKM) - Op(neer)oeteren - De Briganten</option>
 								<option value="1973-1974">1973-1974 - Echt aardig: rechtvaardig (VVKS + VVKM) - Grobbendonk - ?</option>
 							</select>
-						</div>
+
 							<div id="mce-responses" class="clear">
 								<div class="response" id="mce-error-response" style="display:none"></div>
 								<div class="response" id="mce-success-response" style="display:none"></div>
-							</div>	<div class="clear"><input type="submit" value="Ja, hou me op de hoogte!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							</div>	
+
+							<div class="clear">
+								<input type="submit" value="Hou mij op de hoogte!" name="subscribe" id="mc-embedded-subscribe" class="button">
+							</div>
+
 						</form>
 					</div>
+
+					<!--End mc_embed_signup-->
+					
 					<aside>
 						<p>Wie reeds was ingeschreven op de vorige site hoeft dat niet opnieuw te doen.</p>
 					</aside>
